# cmake.skeleton

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler.cmake  deps.cmake  version.cmake
include/: version.h.in
src/: main.cpp
tests/: CMakeLists.txt  exampletest.cpp
